# jin-ce-zhi-suan

./: .gitignore  DESIGN.md  README.md  custom_strategies.private.json.example  dashboard.html  desktop.spec  desktop_launcher.py  main.py  pyproject.toml  requirements.txt
docs/: README.md  个人用户数据源比较.md
docs/api/: API_DOCS.md
docs/architecture/: 项目结构与分层说明.md
docs/data/: DATA_PROVIDER_README.md  数据源配置指南.md
docs/evolution/: evolution_gene_runs.sql  新功能说明_事件驱动多Agent策略进化.md
docs/guides/: 批量回测操作指南.md
docs/operations/: 双库推送指南.md
docs/superpowers/plans/: 2026-05-18-config-center-draft-action-and-stock-list-refresh.md  2026-05-18-history-sync-ignore-checkpoint-ui.md
docs/superpowers/specs/: 2026-05-18-history-sync-ignore-checkpoint-ui-design.md  2026-05-18-history-sync-performance-profiling-design.md
scripts/: build_desktop.bat  build_desktop.sh  deploy_and_start.sh  generate_desktop_icons.py  linux&macOS系统启动.sh  start.ps1
src/evolution/adapters/: llm_gateway_adapter.py
src/utils/: baostock_provider.py  data_factory.py  dependency_bootstrap.py  jqdata_provider.py
tests/unit/: test_dashboard_fresh_theme_regression.py  test_desktop_client_mode_regression.py
